<resources>
    <string name="app_name">plataformasFirebase</string>
    <string name="bienvenido">Bienvenido</string>
    <string name="textview">TextView</string>
    <string name="cerrar_sesi_n">Cerrar Sesión</string>
    <string name="producto">producto</string>
    <string name="title">Title</string>
    <string name="autenticacion_y_registro">Autenticacion y Registro</string>
    <string name="email">Email</string>
    <string name="clave">Clave</string>
    <string name="registrar">Registrar</string>
    <string name="acceder">Acceder</string>
    <string name="ingresar">Ingresar</string>
    <string name="ubicaci_n_actual">Ubicación Actual</string>
    <string name="latitud">Latitud</string>
    <string name="longitud">Longitud</string>
    <string name="altitud">Altitud</string>
    <string name="direcci_n">Dirección</string>
    <string name="obtener">Obtener</string>
    <string name="gps">GPS</string>
    <string name="actualizar">Actualizar</string>
</resources>