<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:layout_marginBottom="30dp"
        android:gravity="center"
        android:textStyle="bold"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:text="@string/ubicaci_n_actual" />
    <ImageView
        android:id="@+id/logo_image"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_gravity="center"
        android:contentDescription="@string/producto"
        android:src="@drawable/ubicacion" />

    <TextView
        android:id="@+id/txt_latitud"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:layout_marginStart="35dp"
        android:textSize="16sp"
        android:text="@string/latitud" />

    <TextView
        android:id="@+id/txt_longitud"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginStart="35dp"
        android:layout_marginBottom="10dp"
        android:textSize="16sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:text="@string/longitud" />
    <TextView
        android:id="@+id/txt_altitud"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textSize="16sp"
        android:layout_marginStart="35dp"
        android:text="@string/altitud" />

    <TextView
        android:id="@+id/direcccion"
        android:textColor="@color/black"
        android:layout_width="match_parent"
        android:layout_marginStart="35dp"
        android:layout_marginTop="10dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:textSize="16sp"
        android:textStyle="bold"
        android:text="@string/direcci_n" />
    <Button
        android:id="@+id/btndetectar"
        android:layout_width="wrap_content"
        android:ems="13"
        android:gravity="center"
        android:layout_gravity="center"
        android:layout_height="wrap_content"
        android:backgroundTint="#D17118"
        android:layout_marginTop="35dp"
        android:text="@string/actualizar" />
</LinearLayout>