<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFF4EA"
    tools:context=".MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="120dp"
        android:padding="10dp">
        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/bienvenido"
            android:layout_marginTop="5dp"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="25sp"/>

        <ImageView
            android:id="@+id/logo_image"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:contentDescription="@string/producto"
            android:src="@drawable/logo" />

        <Button
            android:id="@+id/btn_ingresar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/logo_image"
            android:layout_centerHorizontal="true"
            android:backgroundTint="#D17118"
            android:text="@string/ingresar"
            android:textColor="#ffffff"
            tools:ignore="TextContrastCheck,TextContrastCheck" />

        <Button
            android:id="@+id/btn_gps"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/btn_ingresar"
            android:layout_centerHorizontal="true"
            android:backgroundTint="#D17118"
            android:text="@string/gps"
            android:textColor="#ffffff"
            tools:ignore="TextContrastCheck,TextContrastCheck" />
    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>